Bug 66970 - [IVB] display corruption in claws
Summary: [IVB] display corruption in claws
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-16 16:52 UTC by Jesse Barnes
Modified: 2013-07-16 18:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
x log (25.34 KB, text/plain)
2013-07-16 16:57 UTC, Jesse Barnes
no flags Details

Description Jesse Barnes 2013-07-16 16:52:55 UTC

    
Comment 1 Chris Wilson 2013-07-16 16:56:42 UTC
Don't make come over to California and poke you for the Xorg.0.log...
Comment 2 Jesse Barnes 2013-07-16 16:57:10 UTC
Created attachment 82489 [details]
x log
Comment 3 Jesse Barnes 2013-07-16 16:57:33 UTC
Video of corruption at http://youtu.be/P8TZ1py9CLk
Comment 4 Chris Wilson 2013-07-16 17:28:52 UTC
Can reproduce with gnome-session-fallback (no effects) + claws on saucy.
Comment 5 Chris Wilson 2013-07-16 17:34:30 UTC
Even turning off acceleration, it still happens. Ergo bug in claws.
Comment 6 Chris Wilson 2013-07-16 17:41:22 UTC
But not in UXA. Hmm, pixmap migration.
Comment 7 Chris Wilson 2013-07-16 18:18:30 UTC
Bisect blames commit 07926bfe507071a3d46a2ec13bb86a36bc225761
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jul 11 15:28:55 2013 +0100

    sna: Remove the temporary region allocation from sna_do_copy
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 8 Chris Wilson 2013-07-16 18:45:22 UTC
Dammit, forgot to add the regression id to the changelog.

commit 34c9b759fbab8d548108e954d55de38c6f5bec31
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jul 16 19:39:37 2013 +0100

    sna: Note that borderClip region may be more than a singular box
    
    If the child is obscured, then borderClip will contain a list of valid
    boxes rather a singular extents. I thought this was covered by the
    clipList, but I was wrong.
    
    Reported-by: Jesse Barnes <jbarnes@virtuousgeek.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66970
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.